--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
       <form>
         <fieldset id="login">
-          <h4 id="message">Log in here.</h4>
+          <h4 id="message">Log-in here.</h4>
           <p class="mail">
             <label for="email" class="caption">Email:</label> <br />
             <input type="email" name="email" id="email" />
