create sign-up page
-develop a basic structure of the sign-up page

-slightly modify the log-in page

-update the status in the readme file

--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section>
-      <form>
-        <fieldset id="login">
-          <h4 id="message">Log-in here.</h4>
-          <p class="mail">
-            <label for="email" class="caption">Email:</label> <br />
-            <input type="email" name="email" id="email" />
-          </p>
-          <p class="pass">
-            <label for="password" class="caption">Password:</label> <br />
-            <input type="password" name="password" id="password" />
-          </p>
+    <form>
+      <fieldset id="login">
+        <h4 id="message">Use your account information to <br />log-in.</h4>
+        <p class="mail">
+          <label for="email">Email:</label> <br />
+          <input type="email" name="email" id="email" class="text-box" />
+        </p>
+        <p class="pass">
+          <label for="password">Password:</label> <br />
+          <input
+            type="password"
+            name="password"
+            id="password"
+            class="text-box"
+          />
+        </p>
 
-          <input type="submit" id="sign-in" value="Login" />
-          <p id="user-sign-up">New user? <a href="">Sign-up</a></p>
-        </fieldset>
-      </form>
-    </section>
+        <input type="submit" id="sign-in" value="Login" />
+        <p id="user-sign-up">New user? <a href="sign-up.html">Sign-up</a></p>
+      </fieldset>
+    </form>
   </body>
 </html>
